# sentra-lib

./: .gitignore  CHANGELOG.md  Cargo.toml  DESIGN.md  LICENSE  README.en.md  README.md  SECURITY.md  SentraLib.podspec  build.rs  cbindgen.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
examples/: Makefile  cpp_example.cc
rules/hash/: black.sha256.txt  white.sha256.txt
schema/assets/: cron.json  mcp.json  memory.json  meta.json  plugin.json  process.json  provider.json  skill.json
schema/common/: category.json  file-category.json  severity.json
schema/risks/: scan-report.json
schema/rules/: yara.json
scripts/: audit-provider-catalog.sh  build-adapter-apple.sh  build-cross.ps1  build-cross.sh
spec/: cli_skill.md  install_agent.md  provider_endpoint_catalog.md
spec/agents/: PROCESS.md
src/: config.rs  error.rs  i18n.rs  interfaces.rs  lib.rs  provider_catalog.rs
src/agents/: base.rs  discovery.rs  entries.rs  install.rs  install_status.rs  mod.rs  object.rs  process.rs
src/bindings/: mod.rs
src/providers/: catalog.json  mod.rs
src/risks/: bundled_rules.rs  mod.rs  types.rs
src/utils/: context.rs  file.rs  hashing.rs  (+8 more)
tests/: agent_structure.rs  build_scripts.rs  c_binding_boundary.rs  c_initialize.rs  protocol_helpers.rs  provider_catalog_coverage.rs  risk_asset_scanners.rs  risk_hash_ti_checkers.rs  risk_llm_checker.rs  risk_llm_http_checker.rs  risk_skill_scanner.rs  risk_ti_online_checker.rs  risk_yara_checker.rs  rt_behaviour.rs  sdk_boundary.rs
(+262 files in other folders)
