[package]
name = "sentra-lib"
version = "0.1.3"
edition = "2024"
description = "Rust runtime library for Sentra agent discovery, assets, skills, and risk scanning"
license = "MIT"

[lib]
name = "sentra_lib"
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = []
c-binding = ["dep:cbindgen"]

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
home = "0.5"
md-5 = "0.10"
rayon = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
sha1 = "0.10"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
toml = "0.9"
ureq = "2"
zip = "2"
walkdir = "2"
yara-x = "1.18"
rig-core = "0.39.0"
futures = "0.3.32"
tokio = { version = "1.52.3", features = ["rt", "time", "net"] }
bytes = "1"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
cbindgen = { version = "0.29", optional = true }

[profile.release]
opt-level = "z"
codegen-units = 1
panic = "abort"
strip = "symbols"
